--- a/index.html
+++ b/index.html
@@ -198,6 +198,38 @@ shloks.forEach(s => {
   `;
   listContainer.appendChild(div);
 });
-</script>>
+<script>
+const shloks = [
+  {
+    id: 1,
+    label: "শ্লোক ১",
+    shlok: "ধৃতরাষ্ট্র উবাচ । ধর্মক্ষেত্রে কুরুক্ষেত্রে সমবেতা যুযুৎসবঃ । মামকাঃ পান্ডবাশ্চৈব কিমকুর্বত সঞ্জয় ॥ ১ ॥",
+    translation: "ধৃতরাষ্ট্র জিজ্ঞাসা করলেন— হে সঞ্জয়! ধর্মক্ষেত্রে যুদ্ধের জন্য সমবেত হয়ে আমার পুত্র ও পান্ডুর পুত্রেরা কি করল?",
+    audio: "audio/shlok1.mp3"
+  },
+  {
+    id: 2,
+    label: "শ্লোক ২",
+    shlok: "সঞ্জয় উবাচ । দ্রষ্ট্বা তু পাণ্ডবানীকং ব্যূহং দুর্যোধনস্তদা । আচার্যমুপসঙ্গম্য রাজা বচনমব্রবীত্ ॥ ২ ॥",
+    translation: "সঞ্জয় বললেন— হে রাজন! পাণ্ডবদের সৈন্যবিন্যাস দেখে রাজা দুর্যোধন দ্রোণাচার্যের কাছে গিয়ে বললেন।",
+    audio: "audio/shlok2.mp3"
+  }
+];
+
+const listContainer = document.getElementById("list");
+listContainer.innerHTML = "";
+
+shloks.forEach(s => {
+  const div = document.createElement("div");
+  div.className = "card";
+  div.innerHTML = `
+    <h3>${s.label}</h3>
+    <p>${s.shlok}</p>
+    <p><em>${s.translation}</em></p>
+    <audio controls src="${s.audio}"></audio>
+  `;
+  listContainer.appendChild(div);
+});
+</script>
 </body>
 </html>
