--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>শ্রীমদ্ভগবত গীতা</title>
+<title>ভাগবত গীতা — প্রথম অধ্যায়</title>
 <style>
     body {
         margin: 0;
@@ -59,5 +59,10 @@ p {
 </p>
 
 <p>
-    <strong>অনুবাদঃ
+    <strong>অনুবাদঃ</strong> ধৃতরাষ্ট্র জিজ্ঞাসা করলেন— হে সঞ্জয়! ধর্মক্ষেত্রে যুদ্ধ করার মানসে সমবেত হয়ে আমার পুত্ৰ এবং পাণ্ডুর পুত্রেরা তারপরে কি করল?
+</p>
 
+<a class="btn">🎤 শ্লোক শুনুন</a>
+
+</div></body>
+</html>
