--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>ভাগবত গীতা — প্রথম অধ্যায়</title>
+<title>শ্রীমদ্ভগবত গীতা</title>
 <style>
     body {
         margin: 0;
@@ -56,7 +56,7 @@ p {
     <h2>ধৃতরাষ্ট্র উবাচ</h2><p>
     ধর্মক্ষেত্রে কুরুক্ষেত্রে সমবেতা যুযুত্সবঃ।<br>
     মামকাঃ পাণ্ডবাশ্চৈব কিমকুর্বত সঞ্জয়।।১।।
-</p>
+</strong>
 
 <p>
     <strong>অনুবাদঃ</strong> ধৃতরাষ্ট্র জিজ্ঞাসা করলেন— হে সঞ্জয়! ধর্মক্ষেত্রে যুদ্ধ করার মানসে সমবেত হয়ে আমার পুত্ৰ এবং পাণ্ডুর পুত্রেরা তারপরে কি করল?
