--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ p {
     <strong>অনুবাদঃ</strong> ধৃতরাষ্ট্র জিজ্ঞাসা করলেন— হে সঞ্জয়! ধর্মক্ষেত্রে যুদ্ধ করার মানসে সমবেত হয়ে আমার পুত্ৰ এবং পাণ্ডুর পুত্রেরা তারপরে কি করল?
 </p>
 
-<a class="btn">🎤 শ্লোক শুনুন</a>
+<a class="btn">🔊 শ্লোক শুনুন</a>
 
 </div></body>
 </html>
