--- a/index.html
+++ b/index.html
@@ -1,157 +1,92 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>শ্রীমদ্ভাগবত গীতা</title>
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>ভাগবত গীতা — প্রথম অধ্যায়</title>
 <style>
-    body{
-        font-family: "Noto Sans Bengali", sans-serif;
-        background: #fff7e0;
+    body {
         margin: 0;
         padding: 0;
+        font-family: 'Noto Sans Bengali', sans-serif;
+        background: #fff6d9;
+        color: #4b2e05;
         text-align: center;
-    }
+    }h1 {
+    font-size: 32px;
+    margin-top: 30px;
+    color: #c4511e;
+    font-weight: 700;
+}
 
-    header{
-        padding: 20px 10px;
-    }
+.card {
+    width: 88%;
+    margin: 20px auto;
+    background: #ffeccb;
+    padding: 25px;
+    border-radius: 18px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+}
 
-    header h1{
-        font-size: 34px;
-        color: #c44a1a;
-        margin-bottom: 5px;
-        font-weight: 800;
-    }
+h2 {
+    font-size: 26px;
+    color: #4b2e05;
+    margin-bottom: 10px;
+}
 
-    header h2{
-        font-size: 20px;
-        color: #7a3b1a;
-        margin: 0;
-        font-weight: 700;
-    }
+/* new layout for shlok with right-aligned number */
+.shlok-row{display:flex;align-items:flex-start;justify-content:center;gap:12px;flex-wrap:wrap}
+.shlok-text{font-size:22px;line-height:1.6;max-width:82%;font-weight:700;color:#3a2203;text-align:center;white-space:pre-line}
+.shlok-num{min-width:48px;text-align:right;font-weight:900;font-size:20px;color:#3a2203}
 
-    header h3{
-        font-size: 18px;
-        color: #5e2e12;
-        margin: 5px 0 15px;
-        font-weight: 600;
-    }
+.translation{
+    font-size:20px;
+    line-height:1.7;
+    color:#3a2203;
+    margin-top:18px;
+    text-align:justify;
+    padding:0 6px;
+}
 
-    .card{
-        background: #ffeecf;
-        width: 90%;
-        margin: auto;
-        padding: 20px;
-        border-radius: 16px;
-        box-shadow: 0 4px 10px #e6d8c8;
-        margin-bottom: 30px;
-    }
+.btn {
+    background: #ff7a2f;
+    color: white;
+    font-size: 22px;
+    padding: 12px 25px;
+    border-radius: 30px;
+    display: inline-flex;
+    align-items:center;
+    gap:10px;
+    margin-top: 15px;
+    text-decoration: none;
+    font-weight: 600;
+    box-shadow:0 6px 18px rgba(249,115,87,0.18);
+    border: none;
+    cursor: pointer;
+}
 
-    .card h2{
-        font-size: 26px;
-        font-weight: 900;
-        color: #4d2d04;
-        margin-bottom: 18px;
-    }
+@media(max-width:480px){
+    .shlok-text{font-size:20px}
+    h1{font-size:28px}
+    .shlok-row{flex-direction:column;align-items:center}
+    .shlok-num{text-align:center}
+}
 
-    .shlok-row{
-        display: flex;
-        justify-content: center;
-        gap: 12px;
-        margin-bottom: 12px;
-    }
-
-    .shlok-text{
-        font-size: 20px;
-        font-weight: 800;
-        max-width: 75%;
-        line-height: 1.6;
-        text-align: center;
-        color:#3a2303;
-    }
-
-    .shlok-num{
-        font-size: 19px;
-        font-weight: 800;
-        min-width: 40px;
-        text-align: right;
-        color:#3b2403;
-    }
-
-    .translation{
-        font-size: 17px;
-        color:#4a341e;
-        margin-top: 15px;
-        line-height: 1.6;
-        padding: 0 5px;
-        text-align: left;
-    }
-
-    .translation strong{
-        font-weight: 900;
-    }
-
-    .shlok-note{
-        margin-top: 10px;
-        color: #5c4633;
-        font-size: 15px;
-        text-align: center;
-        font-style: italic;
-    }
-
-    .btn{
-        display: inline-block;
-        margin-top: 18px;
-        background: #ff7a2f;
-        padding: 12px 32px;
-        font-size: 20px;
-        border-radius: 32px;
-        color: white;
-        font-weight: 700;
-        text-decoration: none;
-        box-shadow: 0 4px 10px #d48a5c;
-    }
-
-    @media(max-width:480px){
-        .shlok-row{
-            flex-direction: column;
-        }
-        .shlok-num{
-            text-align: center;
-        }
-    }
 </style>
 </head>
-
 <body>
+    <h1 class="text-3xl font-bold text-center mt-6 text-[#B33A00]">শ্রীমদ্ভগবদ্ গীতা</h1>
+    <h2 class="text-xl font-semibold text-center mt-2 text-[#5A2A00]">প্রথম অধ্যায়</h2>
+    <h3 class="text-lg text-center mt-1 mb-6 text-[#5A2A00]">বিষাদ-যোগ</h3><h1>ভাগবত গীতা</h1><div class="card">
+    <h2>ধৃতরাষ্ট্র উবাচ</h2><div class="shlok-row">
+    <div class="shlok-text">ধর্মক্ষেত্রে কুরুক্ষেত্রে সমবেতা
 
-<header>
-    <h1>শ্রীমদ্ভাগবত গীতা</h1>
-    <h2>প্রথম অধ্যায়</h2>
-    <h3>বিষাদ-যোগ</h3>
-</header>
+যুযুৎসবঃ। মামকাঃ পাণ্ডবাশ্চৈব কিমকুর্বত সঞ্জয়।।</div> <div class="shlok-num">॥ ১ ॥</div> </div>
 
-<div class="card">
-    <h2>ধৃতরাষ্ট্র উবাচ</h2>
-
-    <div class="shlok-row">
-        <div class="shlok-text">
-            ধর্মক্ষেত্রে কুরুক্ষেত্রে সমবেতা যুযুৎসবঃ।  
-            মামকাঃ পান্ডবাশ্চৈব কিমকুর্বত সঞ্জয়।।
-        </div>
-        <div class="shlok-num">।।১।।</div>
-    </div>
-
-    <p class="translation">
-        <strong>অনুবাদঃ</strong> ধৃতরাষ্ট্র জিজ্ঞাসা করলেন— হে সঞ্জয়! ধর্মক্ষেত্রে যুদ্ধ করার মানসে সমবেত হয়ে আমার পুত্র এবং পাণ্ডুর পুত্রেরা তারপর কি করল?
-    </p>
-
-    <p class="shlok-note">— শ্লোক সমাপ্ত —</p>
-
-    <a class="btn">🔊 শ্লোক শুনুন</a>
+<div class="translation">
+    <strong>অনুবাদঃ</strong> ধৃতরাষ্ট্র জিজ্ঞাসা করলেন— হে সঞ্জয়! ধর্মক্ষেত্রে যুদ্ধ করার মানসে সমবেত হয়ে আমার পুত্র এবং পাণ্ডুর পুত্রেরা তারপর কি করল?
 </div>
 
-</body>
+<button class="btn">🔊 শ্লোক শুনুন</button>
+
+</div></body>
 </html>
